--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "author": "dabberdoo",
   "name": "dabberdoo-censorify",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Censors words out of text",
   "main": "censortext",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dabberdoo/censorify"
+    "url": "https://github.com/dabberdoo/censorify.git"
   },
   "keywords": [
     "censor", "words"
