--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "author": "dabberdoo",
-  "name": "dabberdoo-censorify",
-  "version": "0.0.3",
+  "name": "censorify",
+  "author": "Steve Davis",
+  "version": "0.0.4",
   "description": "Censors words out of text",
   "main": "censortext",
   "repository": {
