--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "censorify",
+  "name": "dabberdoo-censorify",
   "author": "Steve Davis",
   "version": "0.0.4",
   "description": "Censors words out of text",
